# LateralController

./: .gitignore  7mradius_1ms_5m.eps  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  Simulation.pro  coordinates.txt  cross_track_error.eps  cross_track_error.txt  output.eps  output.txt  path2.txt  steer.eps  steer.txt  testfemSmooth.txt
.history/src/: Common_20231207145227.h  Common_20231207150832.h  Common_20231207151205.h  Common_20231207151321.h  Common_20231207151745.h  Common_20231207151927.h  Common_20231207152109.h  Common_20231207152200.h  Common_20231207152433.h  Common_20231207152747.h  Common_20231207152826.h  Common_20231207152909.h  Common_20231207152929.h  Common_20231207152935.h  Common_20231207153506.h  LateralControl_20231207111415.h  LateralControl_20231207145126.cpp  LateralControl_20231207145255.h  LateralControl_20231207150858.h  LateralControl_20231207150945.h  LateralControl_20231207151416.cpp  LateralControl_20231207152644.h  LateralControl_20231207153138.cpp  LateralControl_20231207153157.cpp  common_20231207145210.cpp  common_20231207151327.cpp  common_20231207152456.cpp
Path/: coordinates1.txt  coordinates2.txt  coordinates3.txt  testfemSmooth.txt
Path/curvature_10/: path10.txt  path11.txt  path2.txt  path3.txt  path4.txt  path5.txt  path6.txt  path7.txt  path8.txt  path9.txt
Path/curvature_7/: path2.txt  path3.txt  path4.txt  path5.txt  path6.txt  path7.txt  path8.txt  path9.txt
src/: Common.h  KinematicModel.cpp  KinematicModel.h  LateralControl.h  Vehicle.h  common.cpp  info_transform_types.h  main.cpp
(+13 files in other folders)
